fix z-index

--- a/client/styles/production.module.scss
+++ b/client/styles/production.module.scss
@@ -145,7 +145,7 @@
   background: linear-gradient(100deg, #b3d9ff 50%, #FFF 100%);
   width: 100%;
   min-height: 54em;
-  z-index: 500;
+  z-index: 1;
   @include flex-center();
 }
 
